// =====================================================
// DECKORA – Modelo de datos v3
// Compatible con dbdiagram.io
// =====================================================
// Cambios respecto a v2:
// - Relaciones de herencia (jugadores, organizadores, tiendas) usan
//   el operador "-" para que dbdiagram las renderice como 1—1 en vez de *—0..1
// - estadisticas → jugadores también usa "-" (uno a uno)
// =====================================================

// --- Usuarios y roles ---
// Los roles son mutuamente exclusivos por cuenta.
// Una persona real puede tener cuentas separadas (ej: una como jugador y otra como organizador).

Table usuarios {
  id uuid [primary key]
  nombre_usuario varchar [not null]
  correo varchar [not null, unique]
  rol varchar [not null, note: "CHECK: jugador | organizador | tienda"]
  activo boolean [default: true]
  created_at timestamp [default: `now()`]
}

// Jugadores: único rol que puede crear mazos, colecciones e inscribirse a torneos.
// Relación 1—1 con usuarios (extiende al usuario base).

Table jugadores {
  usuario_id uuid [primary key, ref: - usuarios.id]
  formato_preferido varchar [note: "CHECK: COMMANDER | STANDARD | MODERN | PIONEER | LEGACY"]
}

// Organizadores: pueden crear torneos. No pueden crear mazos ni inscribirse.
// Relación 1—1 con usuarios.

Table organizadores {
  usuario_id uuid [primary key, ref: - usuarios.id]
  descripcion text
  sitio_web varchar
  verificado boolean [default: false]
}

// Tiendas: pueden crear torneos. Tienen ubicación física para el mapa.
// No pueden crear mazos ni inscribirse a torneos.
// Relación 1—1 con usuarios.

Table tiendas {
  usuario_id uuid [primary key, ref: - usuarios.id]
  nombre_tienda varchar
  direccion varchar
  numero_telefono varchar
  horario_apertura varchar
  latitud float [note: "Requerido para búsqueda por proximidad"]
  longitud float [note: "Requerido para búsqueda por proximidad"]
}

// --- Cartas ---
// Las cartas NO se almacenan como imágenes, solo se guarda la URL de Scryfall.
// Cada fila representa una impresión específica (set + carta).
// El campo embedding permite recomendaciones con pgvector (IA).

Table cartas {
  id uuid [primary key]
  scryfall_id varchar [unique, not null, note: "UUID de Scryfall para sincronización y deduplicación"]
  nombre varchar [not null]
  tipo varchar
  resistencia varchar
  fuerza varchar
  texto text
  costo_mana varchar
  imagen_url varchar [note: "URL de Scryfall, nunca imagen local"]
  set_codigo varchar [note: "Código del set de esta impresión, ej: DSK, BLB"]
  es_tierra_basica boolean [default: false]
  embedding vector(1536) [note: "pgvector: para recomendaciones con IA"]
}

// --- Colecciones (lo que el jugador posee físicamente) ---
// Solo jugadores pueden tener colecciones.

Table colecciones {
  id uuid [primary key]
  usuario_id uuid [ref: > jugadores.usuario_id, note: "Solo jugadores pueden poseer colecciones"]
  nombre varchar [not null]
  fecha_creacion timestamp [default: `now()`]
  activo boolean [default: true]
}

Table coleccion_cartas {
  id uuid [primary key]
  coleccion_id uuid [ref: > colecciones.id]
  carta_id uuid [ref: > cartas.id]
  cantidad integer [default: 1]
  es_foil boolean [default: false]

  indexes {
    (coleccion_id, carta_id, es_foil) [unique, note: "Misma carta foil y no-foil son filas distintas, pero no se duplican"]
  }
}

// --- Mazos (lo que el jugador construye para jugar o inscribir en torneos) ---
// Separado de colecciones porque tienen reglas distintas:
// un mazo tiene formato, validación por reglas (Strategy), comandante, etc.
// Solo jugadores pueden crear mazos.

Table mazos {
  id uuid [primary key]
  usuario_id uuid [ref: > jugadores.usuario_id, note: "Solo jugadores pueden crear mazos"]
  nombre varchar [not null]
  formato varchar [not null, note: "CHECK: COMMANDER | STANDARD | MODERN | PIONEER | LEGACY"]
  descripcion text
  publico boolean [default: false]
  slug varchar [unique, note: "Para URLs públicas tipo /m/sol-ring-edh"]
  actualizado_en timestamp [default: `now()`]
  fecha_creacion timestamp [default: `now()`]
}

Table mazo_cartas {
  id uuid [primary key]
  mazo_id uuid [ref: > mazos.id]
  carta_id uuid [ref: > cartas.id]
  cantidad integer [default: 1]
  es_comandante boolean [default: false, note: "Solo aplica en formato Commander"]

  indexes {
    (mazo_id, carta_id) [unique, note: "Una carta no puede aparecer dos veces en el mismo mazo; para eso está cantidad"]
  }
}

// --- Torneos y enfrentamientos ---
// organizador_id referencia a usuarios.id directamente.
// La restricción de que solo organizadores o tiendas pueden crear torneos
// se maneja en el middleware: requirePerfil('organizador', 'tienda').

Table torneos {
  id uuid [primary key]
  organizador_id uuid [ref: > usuarios.id, note: "Middleware valida que sea organizador o tienda"]
  nombre varchar [not null]
  formato varchar [not null, note: "CHECK: COMMANDER | STANDARD | MODERN | PIONEER | LEGACY"]
  estado varchar [default: "pendiente", note: "CHECK: pendiente | en_curso | finalizado | cancelado"]
  fecha timestamp [not null]
  ubicacion varchar
  latitud float
  longitud float
  cupo_maximo integer
  precio float [default: 0]
  created_at timestamp [default: `now()`]
}

// inscripciones referencia mazo_id (no coleccion_id) porque lo que se inscribe
// es un mazo específico con sus reglas de formato, no la colección completa.

Table inscripciones {
  id uuid [primary key]
  torneo_id uuid [ref: > torneos.id]
  usuario_id uuid [ref: > jugadores.usuario_id, note: "Solo jugadores pueden inscribirse"]
  mazo_id uuid [ref: > mazos.id, note: "El mazo inscrito. La validación por formato se corre aquí (Strategy)"]
  fecha_inscripcion timestamp [default: `now()`]
  confirmado boolean [default: false]

  indexes {
    (torneo_id, usuario_id) [unique, note: "Un jugador no puede inscribirse dos veces al mismo torneo"]
    (torneo_id, mazo_id) [unique, note: "Un mazo no puede inscribirse dos veces al mismo torneo"]
  }
}

// snapshot_mazo guarda una "foto" de las cartas del mazo al momento de inscribirse,
// por si el jugador lo edita después del torneo. Es intencional, no duplicación.

Table snapshot_mazo_inscripcion {
  id uuid [primary key]
  inscripcion_id uuid [ref: > inscripciones.id]
  carta_id uuid [ref: > cartas.id]
  cantidad integer [not null]
  es_foil boolean [default: false]
}

Table rondas {
  id uuid [primary key]
  torneo_id uuid [ref: > torneos.id]
  numero_ronda integer [not null]
  tipo_ronda varchar [note: "CHECK: swiss | eliminacion_directa | final"]
}

Table enfrentamientos {
  id uuid [primary key]
  ronda_id uuid [ref: > rondas.id]
  numero_mesa integer
  estado varchar [default: "pendiente", note: "CHECK: pendiente | en_curso | finalizado"]
}

Table enfrentamiento_participantes {
  id uuid [primary key]
  enfrentamiento_id uuid [ref: > enfrentamientos.id]
  inscripcion_id uuid [ref: > inscripciones.id]
  puntos_obtenidos integer [default: 0]
  resultado varchar [note: "CHECK: ganador | perdedor | empate | pendiente"]
}

// --- Estadísticas ---
// Se calculan dinámicamente desde enfrentamiento_participantes con una query SQL.
// Esta tabla actúa como CACHÉ para evitar recalcular en cada consulta.
// Debe actualizarse al finalizar cada enfrentamiento (trigger o service).
// Solo jugadores tienen estadísticas (son los únicos que participan).
// Relación 1—1 con jugadores.

Table estadisticas {
  usuario_id uuid [primary key, ref: - jugadores.usuario_id]
  partidas_ganadas integer [default: 0]
  partidas_perdidas integer [default: 0]
  partidas_empatadas integer [default: 0]
  torneos_participados integer [default: 0]
  ultima_actualizacion timestamp [default: `now()`]
}
